--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.hadesfranklyn.uber">
+    package="com.hadesfranklyn.uber" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -16,9 +16,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Uber"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".activity.MapsActivity" />
+            android:name=".activity.PassageiroActivity"
+            android:exported="false"
+            android:label="@string/title_activity_passageiro"
+            android:theme="@style/Theme.Uber.NoActionBar" />
         <activity
             android:name=".activity.RequisicoesActivity"
             android:exported="false" />
@@ -50,7 +53,7 @@
         <activity
             android:name=".activity.MainActivity"
             android:exported="true"
-            android:label="@string/title_activity">
+            android:label="@string/title_activity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
